--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html
 <html lang="it">
 
 <head>
@@ -226,6 +226,37 @@
         </div>
       </div>
     </section></body>
+
+  <!--servizi-->
+    <div class="spacer"></div>
+    <section id="servizi">
+      <div class="container">
+
+        <div class="servizi-container">
+          <div class="servizio">
+            <div class="servizio-icon">
+              <i class="fa-solid fa-wine-glass" style="color: #952b39;"></i>
+            </div>
+            <h3 class="servizio-title">Vini di alta qualità</h3>
+
+          </div>
+          <div class="servizio">
+            <div class="servizio-icon">
+              <i class="fa-solid fa-seedling" style="color: #952b39;"></i>
+            </div>
+            <h3 class="servizio-title">Attenzione all'ambiente</h3>
+
+          </div>
+          <div class="servizio">
+            <div class="servizio-icon">
+              <i class="fa-solid fa-truck-fast" style="color: #952b39;"></i>
+            </div>
+            <h3 class="servizio-title">Spedizione in tutta Italia </h3>
+
+          </div>
+    
+   
+
     <!--fine prodotti-->
     <div class="spacer"></div>
     <section id="gallery">
@@ -371,6 +402,71 @@
     <!--fine script-->
 
 </body>
+  <!--script-->
 
+    <!--hamburger-menu-->
+    <script>
+      let item = document.querySelector(".icon-hamburger");
+      item.addEventListener("click", function() {
+        document.body.classList.toggle("menu-open");
+      });
+      //torna a inizio pagina
+      window.addEventListener("scroll", function() {
+        var button = document.querySelector(".back-to-top");
+        if (window.pageYOffset > 300) {
+          button.classList.add("show");
+        } else {
+          button.classList.remove("show");
+        }
+      });
+      document.querySelector(".back-to-top").addEventListener("click", function(e) {
+        e.preventDefault();
+        window.scrollTo({
+          top: 0,
+          behavior: "smooth"
+        });
+      });
+      //cookies
+      window.addEventListener('DOMContentLoaded', function() {
+        var cookieBanner = document.querySelector('.cookie-banner');
+        var cookieAccept = document.querySelector('.cookie-accept');
+        cookieAccept.addEventListener('click', function() {
+          cookieBanner.style.display = 'none';
+          // Aggiungi qui la logica per salvare lo stato dei cookie accettati
+        });
+      });
+      //checkbox
+      document.getElementById('submit-btn').addEventListener('click', function(event) {
+        event.preventDefault(); // Evita il comportamento predefinito del pulsante di invio
+        var checkbox = document.getElementById('privacy-checkbox');
+        if (checkbox.checked) {
+          // Azioni da eseguire se il checkbox è selezionato
+          // Esempio: invio del form
+          console.log('Form inviato con successo!');
+        } else {
+          // Avviso se il checkbox non è selezionato
+          alert('Devi accettare l\'informativa sulla privacy per poter inviare il form.');
+        }
+      });
+      //Posizione Maps
+      function initMap() {
+        var posizione = {
+          lat: 44.800229965848224,
+          lng: 8.34166116940787,
+        };
+        var mappa = new google.maps.Map(document.getElementById('mappa'), {
+          zoom: 15,
+          center: posizione
+        });
+        var marker = new google.maps.Marker({
+          position: posizione,
+          map: mappa
+        });
+  
+    <!--bootstrap js-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js">
+   
+
+    <!--fine script-->
 </html>
 
