--- a/index.html
+++ b/index.html
@@ -311,6 +311,114 @@
             <div class="gallery-item">
               <img src="https://github.com/saraperocchio/SIto-Web-PerocchioVIni/blob/main/images/gallery/galleria-fotografica-5.jpg?raw=true" alt="Immagine 9">
             </div>
+                <!-- caratteristiche vino-->
+
+                        <div class="wine-characteristics">
+                          <div class="characteristic">
+                            <span class="name">Leggero</span>
+                            <div class="bar">
+                              <div class="fill" style="width: 70%;"></div>
+                            </div>
+                            <span class="preference">Strutturato</span>
+                          </div>
+                          <div class="characteristic">
+                            <span class="name">Morbido</span>
+                            <div class="bar">
+                              <div class="fill" style="width: 60%;"></div>
+                            </div>
+                            <span class="preference">Tannico</span>
+                          </div>
+                          <div class="characteristic">
+                            <span class="name">Secco</span>
+                            <div class="bar">
+                              <div class="fill" style="width: 30%;"></div>
+                            </div>
+                            <span class="preference">Dolce</span>
+                          </div>
+                          <div class="characteristic">
+                            <span class="name">Piatto</span>
+                            <div class="bar">
+                              <div class="fill" style="width: 50%;"></div>
+                            </div>
+                            <span class="preference">Acidulo</span>
+                          </div>
+                        </div>
+                        <!-- fine caratteristiche vino-->
+                      </div>
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-6">
+
+              <div class="prodotti product-box">
+                <div class="card">
+                  <div class="card-inner">
+                    <div class="card-body card-body--front">
+                      <img src="images/vini/monferrato-dolcetto.webp" alt="Prodotto 2" class="prodotti-immagine">
+                    </div>
+                    <div class="card-body card-body--back">
+                      <div class="prodotti-descrizione">
+                        <h3>Monferrato Dolcetto D.O.C.</h3>
+                        <div class="spacer"></div>
+                        <p> <b>Zona di produzione:</b> Vinchio (AT).
+                          <b>Vitigno:</b> 100% Dolcetto.<br>
+                          <b>Gradazione alcolica:</b> 13,5 % vol..
+                          <b>Vinificazione:</b> vinificazione attenta e controllata in botti di cemento vetrificato.<br>
+                          <b>Caratteristiche organolettiche</b><br>
+                          <b>Colore - Tipologia:</b> rosso rubino intenso con riflessi violacei; leggermente frizzante.
+                          <b>Profumo:</b> vivacemente vinoso, ricco di note fruttate a bacca rossa.
+                          <b>Sapore:</b> asciutto, vellutato.
+
+                          <b>Abbinamenti - Affinità gastronomiche:</b> accompagna tutto il pasto, in particolare antipasti misti, paste con sughi vegetali o di carne, arrosti di carni bianche, umidi e brasati.
+                          <b>Temperatura di degustazione:</b> servire a 16-18°C .
+                        </p>
+                        <!-- caratteristiche vino-->
+
+                        <div class="wine-characteristics">
+                          <div class="characteristic">
+                            <span class="name">Leggero</span>
+                            <div class="bar">
+                              <div class="fill" style="width: 70%;"></div>
+                            </div>
+                            <span class="preference">Strutturato</span>
+                          </div>
+                          <div class="characteristic">
+                            <span class="name">Morbido</span>
+                            <div class="bar">
+                              <div class="fill" style="width: 50%;"></div>
+                            </div>
+                            <span class="preference">Tannico</span>
+                          </div>
+                          <div class="characteristic">
+                            <span class="name">Secco</span>
+                            <div class="bar">
+                              <div class="fill" style="width: 30%;"></div>
+                            </div>
+                            <span class="preference">Dolce</span>
+                          </div>
+                          <div class="characteristic">
+                            <span class="name">Piatto</span>
+                            <div class="bar">
+                              <div class="fill" style="width: 40%;"></div>
+                            </div>
+                            <span class="preference">Acidulo</span>
+                          </div>
+                        </div>
+                        <!-- fine caratteristiche vino-->
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    </section>
+    <!--fine prodotti-->
           </div>
 
         </div>
@@ -513,7 +621,7 @@
     <!--bootstrap js-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js">
    
-
+     </script>
     <!--fine script-->
 </html>
 
